<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginRegister"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login2"
    tools:context=".loginregister.LoginRegister">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:src="@drawable/logomercusuar1" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/holo_blue_dark"
            android:layout_marginTop="25dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#000000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/holo_blue_dark"
            android:layout_marginTop="18dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#000000" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearKesempatan"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelKesempatan"
                android:text="Kesempatan Anda :"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tigakali"
                android:text="3 X "
                android:textSize="18sp"
                android:layout_marginLeft="150dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="#a9acee"
            android:text="@string/text_login" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/labelLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tidak Punya Akun?"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewLinkRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Buat Baru"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="16sp" />

        </LinearLayout>
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>